# rust-static-file-server

./: .gitignore  Cargo.toml
src/: libs.rs  main.rs
src/libs/: file.rs  http.rs  root.rs
src/libs/root/: controller.rs  repository.rs  router.rs  service.rs
